# shore-kits

./: AUTHORS  COPYING  INSTALL  Makefile.am  README  THIS_IS_QPIPE  autogen.sh  automake  collect-stats.sh  commands.txt  configure.ac  configure.in  db2-test-setup.sh  dbgen-generate-files-mt.pl  dbgen-generate-files.pl  depcomp  do_runs.sh  do_scale_cls.sh  do_scale_whs.sh  driver.pl  gnuify-changelog.pl  install-sh  looklog.pl  missing  mysql-test-run.sh  mysql-test-setup.sh  q16_commands.txt  qpipe-generate-throughput-graphs.pl  qpipe_compile.txt  qpipetrx  reserve_driver.pl  shore.conf  sim_mix_commands.txt  updatetags.sh
include/: Makefile.am  core.h  core_impl.h  dispatcher.h  dora.h  dummy.cpp  engine.h  functors.h  guard.h  k_defines.h  kits-config.h.in  namespace.h  packet.h  page.h  pthread_wrappers.h  qpipe.h  qpipe_panic.h  scheduler.h  server.h  shore.h  stage.h  stage_container.h  stage_factory.h  stages.h  tester_thread.h  thread.h  trace.h  trxstages.h  tuple.h  util.h  util_impl.h  utils.h
include/core/: dispatcher.h  functors.h  packet.h  query_state.h  reserve_query_workers.h  stage.h  stage_container.h  trx_packet.h  tuple.h  tuple_fifo.h  tuple_fifo_directory.h
include/dispatcher/: dispatcher.h
include/dora/: action.h  action_cache.h  base_action.h  base_partition.h  cache.h  common.h  dflusher.h  dkey_ranges_map.h  dora_env.h  dora_error.h  doratrxs.h  flusher.h  key.h  lockman.h  logger.h  logical_lock.h  part_table.h  partition.h  range_action.h  range_part_table.h  range_partition.h  range_table_i.h  rvp.h  srmwqueue.h  worker.h
include/engine/: bdb_config.h  core.h  dispatcher.h  functors.h  page.h  qpipe_panic.h  stage_factory.h  stages.h  sync.h  thread.h  tuple_source.h
include/job/: job.h
include/memory/: mem_obj.h
include/sched/: cpu.h  cpu_set.h  cpu_set_struct.h  cpu_struct.h  os_support.h  policy.h  policy_os.h  policy_query_cpu.h  policy_rr_cpu.h  policy_rr_module.h
include/server/: command_set.h  config.h  config_display.h  history.h  interactive_mode.h  network_mode.h  print.h  process_next_command_using_fgets.h  qpipe.h  server.h
include/stages/: aggregate.h  bnl_caching_join.h  bnl_in.h  bnl_join.h  common.h  delay_writer.h  echo.h  fdump.h  fscan.h  func_call.h  hash_aggregate.h  hash_join.h  iprobe.h  iscan.h  merge.h  partial_aggregate.h  pipe_hash_join.h  scalar_aggregate.h  sieve.h  sort.h  sorted_in.h  tscan.h  tuple_source.h
include/tests/: common.h  tester_thread.h  tpch_struct.h
include/trace/: trace.h  trace_force.h  trace_print_pthread.h  trace_stream.h  trace_types.h
include/util/: acounter.h  alignedops.h  alloc_printf.h  atomic_ops.h  bptree.h  busy_delay.h  c_str.h  cache.h  chomp.h  clh_lock.h  clh_manager.h  clh_rwlock.h  compat.h  condex.h  conf_file.h  config.h  confparser.h  countdown.h  cpustat.h  ctx.h  decimal.h  envvar.h  errnum_to_string.h  exception.h  file.h  fileops.h  fnv.h  guard.h  hash_set  hashtable.h  history.h  itimer.h  key_ranges_map.h  latchedarray.h  linux_procstat.h  mcs_lock.h  mcs_rwlock.h  namespace.h  offsetof.h  pool_alloc.h  (+35 more)
include/vldb07_model/: model.h
include/workload/: bdb_config.h  client.h  client_sync.h  common.h  dispatcher_globals.h  driver.h  driver_directory.h  job.h  job_directory.h  loader.h  measurements.h  parser.h  process_query.h  register_job_drivers.h  register_stage_containers.h  repos.h  table_load.h  workload.h  workload_client.h
src/: Makefile  Makefile.am  Makefile.in  dispatcher.cpp  packet.cpp  page.cpp  pthread_wrappers.cpp  stage.cpp  stage_container.cpp  stage_queue.cpp  thread.cpp  tuple.cpp
src/bdb-ext/: Makefile.am  bpool.cpp  mp_prefetch.cpp
src/core/: Makefile  Makefile.am  dispatcher.cpp  dispatcher_cpu.cpp  packet.cpp  stage_container.cpp  trx_packet.cpp  tuple.cpp  tuple_fifo.cpp  tuple_fifo_directory.cpp
src/dispatcher/: dispatcher.cpp
src/dora/: action.cpp  base_partition.cpp  dflusher.cpp  dkey_ranges_map.cpp  dora_env.cpp  flusher.cpp  lockman.cpp  logger.cpp  logical_lock.cpp  part_table.cpp  partition.cpp  range_part_table.cpp  rvp.cpp  worker.cpp
src/engine/: Makefile.am  dispatcher.cpp  stage_container.cpp  thread.cpp  tuple.cpp
src/job/: job.cpp
src/lib/: Makefile.am
src/memory/: mem_obj.cpp
src/scheduler/: Makefile  Makefile.am  cpu.cpp  cpu_set.cpp
src/server/: Makefile  Makefile.am  command_set.cpp  history.cpp  interactive_mode.cpp  network_mode.cpp  process_next_command_using_fgets.cpp  server.cpp
src/stages/: Makefile  Makefile.am  aggregate.cpp  bnl_caching_join.cpp  bnl_in.cpp  bnl_join.cpp  delay_writer.cpp  echo.cpp  fdump.cpp  fscan.cpp  func_call.cpp  hash_aggregate.cpp  hash_join.cpp  iprobe.cpp  iscan.cpp  merge.cpp  partial_aggregate.cpp  pipe_hash_join.cpp  scalar_aggregate.cpp  sieve.cpp  sort.cpp  sort.cpp.2  sorted_in.cpp  tscan.cpp
src/tests/: Makefile.am  bdb_tpcc_load.cpp  config_file_example.cpp  db2_tpcc_load.sqC  dora_kit_shell.cpp  grouper.cpp  lineitem_struct_sizes.cpp  load_db_tables.cpp  load_tpcc_tables.cpp  mysql_tpcc_load.cpp  old_shore_load.cpp  postgres_tpcc.cpp  postgres_tpcc_load.cpp  predicates.h  shore_kits.cpp  shore_test_fgl.cpp  shore_test_rvp.cpp  shore_tpcc_kit.cpp  shore_tpcc_kit_shell.cpp  shore_tpcc_load.cpp  shore_tpcc_trees.cpp  simple_test.cpp  test_acounter.cpp  test_aggregate_stage.cpp  test_alloc.cpp  test_bitvector.cpp  test_bnl_in_stage.cpp  test_bnl_join_stage.cpp  test_bptree.cpp  test_busy_wait.cpp  test_busy_wait_all.cpp  test_clh_lock.cpp  test_clh_rwlock.cpp  test_constants.cpp  test_context_makecontext.cpp  test_context_producer_consumer.cpp  test_context_set.cpp  test_context_switching.cpp  test_cpu_binding.cpp  test_customer_load.cpp  (+60 more)
src/trace/: Makefile.am  trace.cpp  trace_force.cpp  trace_print_pthread.cpp  (+1 more)
tests/: Makefile.am  lineitem_struct_sizes.cpp  test_aggregate_stage.cpp  test_bnl_caching_join_stage.cpp  test_fdump_stage.cpp  test_fscan_stage.cpp  test_func_call_stage.cpp  test_merge_stage.cpp  test_q1.cpp  test_q6.cpp  test_q6_2cl.cpp  test_scalar_aggregate_stage.cpp  test_sort_stage.cpp  test_trace.cpp  test_tscan_stage.cpp
(+808 files in other folders)
